# Youtube-Sentiment-Analysis-Pipeline

./: .gitignore  LICENSE  README.md  dockerfile  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
.github/workflows/: cicd.yaml
flask-api/: main.py
notebooks/: Exp_Logistic_Regression.ipynb  Handle_Class_Imbalance.ipynb  Linear_SVC.ipynb  baseline_model.ipynb  compare_BoW_tfidf.ipynb  max_features_experiment.ipynb  preprocessing_and_EDA.ipynb
src/data/: data_ingestion.py  data_preprocessing.py
src/model/: model_building.py  model_evaluation.py  register_model.py
yt-chrome-plugin-frontend/: chrome_extension.html  chrome_extension.js  manifest.json
